--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,55 @@
-section {
+body{
   margin: 0;
   padding: 0;
+}
+
+section {
   width: 100%;
   height: 100vh;
   text-align: center;
+  font-family: sans-serif;
 }
 
 div {
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
+}
+
+#title{
+  font-size: 2rem;
+  font-weight: 500;
 }
 
 #description {
   font-style: italic;
+  margin-top: -1rem;
 }
+
+form{
+  background-color: #2C2C4B;
+  color: white;
+  padding: 2rem;
+  border-radius: .5rem;
+  margin-top: 3.5rem;
+}
+
+.form-section{
+  text-align: left;
+}
+
+label{
+  width: 100%;
+}
+
+input{
+  width: 100%;
+  margin-top: .5rem;
+  padding: .6rem 1rem;
+  border-radius: .3rem;
+  font-size: 1rem;
+}
+
+input::placeholder{
+  font-size: 1rem;
+}
+
