Mahmudul: finish the project

--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,50 @@ input::placeholder{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-bottom: 1rem;
 }
 
-.radio-box {
+#checkbox-div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1rem;
+}
+
+.mb-5 {
   margin-bottom: .5rem;
 }
 
-.radio-box label {
+.mb-5 label {
   width: 0;
+}
+
+span{
+  font-size: .8rem;
+}
+
+.form-section #comments{
+  width: 100%;
+}
+
+.form-section textarea{
+  margin-top: .5rem;
+  font-size: 1rem;
+  padding: .5rem;
+}
+
+.form-section textarea::placeholder{
+  font-size: 1rem;
+}
+
+button{
+  width: 100%;
+  background-color: #37AF65;
+  padding: .8rem 0;
+  border: 0;
+  border-radius: .5rem;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
 
